<resources>
    <string name="hello">Hello, %s</string>
    <string name="app_name">listview</string>
    <string name="addPerson">Add Person</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="message_field_required">The field %s is required</string>
    <string name="age">Age</string>
    <string name="hobby">Hobby</string>
    <string name="sex">Sex</string>
</resources>