<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.hello_world.MainActivity">

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPersonPhone"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/editTextText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonPhone" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/hobby"
        app:layout_constraintBottom_toTopOf="@+id/editTextText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/sex"
        app:layout_constraintBottom_toTopOf="@+id/btnAddPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <Button
        android:id="@+id/btnAddPerson"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="337dp"
        android:backgroundTint="#DDDBDB"
        android:text="@string/addPerson"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

</androidx.constraintlayout.widget.ConstraintLayout>